# getaddrinfo_example

./: CMakeLists.txt  README.md
src/: getaddrinfo_example.c
